dark mode fixing

--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -46,7 +46,7 @@ a {
 
 @media (hover: hover) {
 	a:hover {
-		color: $brand-sec-clr;
+		color: $hover-clr;
 	}
 }
 
