--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,11 +1,8 @@
 // COLOR PALETTE
-$body-bg: #f1f1f1;
-$brand-main-clr: #d8ac33;
-$brand-sec-clr: #cbe1f1;
-$main-clr: #ff0000;
 $txt-clr: #2a4d7b;
 $txt-clr-dark: #cbe1f1;
-$content-bg: #ffffffA1;
+$hover-clr: #cbe1f1;
+$content-bg: #ffffff6c;
 $content-bg-dark: #2e2e2e;
 
 // BOX
